cluster/tide-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  labels:
    app: tide
  name: tide
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tide
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tide
    spec:
      containers:
      - args:
        - --dry-run=false
        - --config-path=/etc/config/config.yaml
        image: gcr.io/k8s-prow/tide:v20190620-f4e6553b2
        imagePullPolicy: IfNotPresent
        name: tide
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/github
          name: oauth
          readOnly: true
        - mountPath: /etc/config
          name: config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: tide
      serviceAccountName: tide
      terminationGracePeriodSeconds: 30
      volumes:
      - name: oauth
        secret:
          defaultMode: 420
          secretName: oauth-token
      - configMap:
          defaultMode: 420
          name: config
        name: config
